fixed broken css

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,11 +14,4 @@
  *= require_self
  */
 
- body { background: #00B88A; }
 
-ul { list-style-type: none; }
-
-li { display: inline; 
-    border: solid;
-    border-width: 1px 1px 0 1px;
-    margin: 0 0.5em 0 0; }
