--- a/app/assets/stylesheets/static.css
+++ b/app/assets/stylesheets/static.css
@@ -1,4 +1,8 @@
-// Place all the styles related to the static controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+body { background: #00B88A; }
 
+ul { list-style-type: none; }
+
+li { display: inline; 
+    border: solid;
+    border-width: 1px 1px 0 1px;
+    margin: 0 0.5em 0 0; }
